welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: Missing closing brace `}' assumed here
def marqueSol()
^MethodsPicture:1: error: expected class or object definition
def marqueSol()
^MethodsPicture:2: error: expected class or object definition
{
^MethodsPicture:7: error: expected class or object definition
def faireV(c: Color)
^MethodsPicture:8: error: expected class or object definition
{
^MethodsPicture:24: error: expected class or object definition
def faireMotif()
^MethodsPicture:25: error: expected class or object definition
{
^MethodsPicture:34: error: expected class or object definition
def faireLigne()
^MethodsPicture:35: error: expected class or object definition
{
^MethodsPicture:46: error: expected start of definition
override def run() {
         ^