welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def marqueSol()
{
  baisseBrosse()
  leveBrosse()
}

def faireV(c: Color)
{
  setCouleurBrosse(c)
  avance(2)
  marqueSol()
  avance()
  gauche()
  avance()
  marqueSol()
  recule()
  droite()
  avance()
  marqueSol()
  avance(2)
  gauche()
}

def faireMotif()
{

  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  avance(7)  
}

def faireLigne()
{
  for(i <- 1 to 3)
  {
    faireMotif()
  }
  recule(21)
  gauche()
  avance(7)
  droite()
}

override def run() {
  def marqueSol()
{
  baisseBrosse()
  leveBrosse()
}

def faireV()
{
  avance(2)
  marqueSol()
  avance()
  gauche()
  avance()
  marqueSol()
  recule()
  droite()
  avance()
  marqueSol()
  avance(2)
  gauche()
}

def faireMotif()
{
  for(i <- 1 to 4)
  { 
    faireV()
  }
  avance(7)
}


override def run()
{
	for(j <- 1 to 3)
  {
    for(i <- 1 to 3)
    {
      faireMotif()
    }
    recule(21)
  	gauche()
  	avance(7)
 	 droite()
  }
}